--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 django = "^4.2.6"
+djangorestframework = "^3.14.0"
+django-cors-headers = "^4.3.0"
 
 
 [build-system]
