--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.9"
 django = "^4.2.6"
 djangorestframework = "^3.14.0"
 django-cors-headers = "^4.3.0"
+markdown = "^3.5"
+django-filter = "^23.3"
 
 
 [build-system]
