--- a/client/frontend/package.json
+++ b/client/frontend/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
+    "@tanstack/react-query-next-experimental": "^5.0.0-alpha.80",
     "axios": "^1.5.1",
     "next": "13.5.4",
     "react": "^18",
