--- a/client/frontend/package.json
+++ b/client/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "@types/node": "^20",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18",
